** The following hooks are removed:
*** AbortChangePassword
*** LoginPasswordResetMessage
*** PrefsPasswordAudit
** The UserLoginComplete hook will no longer be called for all logins, only for
   those via the web UI. Use UserLoggedIn if you need to do something on all
   logins.
** $wgRequirePasswordforEmailChange is removed.

=== New features in 1.27 ===
* $wgDataCenterUpdateStickTTL was also added. This decides how long a user
  sticks to the primary DC (via cookies) after they make changes to the site.
* Added a new hook, 'UserMailerTransformContent', to transform the contents
  of an email. This is similar to the EmailUser hook but applies to all mail
  sent via UserMailer.
* Added a new hook, 'UserMailerTransformMessage', to transform the contents
  of an emai after MIME encoding.
* Added a new hook, 'UserMailerSplitTo', to control which users have to be
  emailed separately (ie. there is a single address in the To: field) so
  user-specific changes to the email can be applied safely.
* $wgCdnMaxageLagged was added, which limits the CDN cache TTL
  when any load balancer uses a DB that is lagged beyond the 'max lag'
  setting in the relevant section of $wgLBFactoryConf.
* User::newSystemUser() may be used to simplify the creation of passwordless
  "system" users for logged actions from scripts and extensions.
* Extensions can now return detailed error information via the API when
  preventing user actions using 'getUserPermissionsErrors' and similar hooks
  by using ApiMessage instances instead of strings for the $result value.
* $wgAPIMaxLagThreshold was added to limit bot changes when databases lag
  becomes too high.
* Skins and extensions can now use FlexBox mixins (.flex-display(@display: flex)
  and .flex(@grow: 1, @shrink: 1, @width: auto, @order: 1)) in Less to create
  cross-browser-compatible FlexBox rules. Users will still need to add fallback
  float rules or the like for compatibility with IE9- separately.